--- a/public/index2.html
+++ b/public/index2.html
@@ -4,104 +4,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Device Manager</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        form {
-            margin-bottom: 20px;
-        }
-        label {
-            display: block;
-            margin-bottom: 8px;
-        }
-        input, select {
-            display: block;
-            margin-bottom: 10px;
-            padding: 5px;
-            width: 300px;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        li {
-            background: #f4f4f4;
-            margin-bottom: 5px;
-            padding: 10px;
-            border: 1px solid #ddd;
-        }
-    </style>
+    <title>Device Management Application</title>
 </head>
 <body>
-    <h1>Device Manager</h1>
-    <form id="device-form">
-        <label for="deviceName">Device Name:</label>
-        <input type="text" id="deviceName" name="deviceName" required>
-
-        <label for="deviceType">Device Type:</label>
-        <select id="deviceType" name="deviceType" required>
-            <option value="">Select Type</option>
-            <option value="Mobile">Mobile</option>
-            <option value="Tablet">Tablet</option>
-            <option value="Laptop">Laptop</option>
-            <option value="Desktop">Desktop</option>
-        </select>
-
-        <label for="ownerName">Owner Name:</label>
-        <input type="text" id="ownerName" name="ownerName" required>
-
-        <label for="batteryStatus">Battery Status (%):</label>
-        <input type="number" id="batteryStatus" name="batteryStatus" min="1" max="100" required>
-
-        <button type="submit">Add Device</button>
-    </form>
-
-    <ul id="device-list"></ul>
-
+    <!-- Database error handling implementation -->
     <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const form = document.getElementById('device-form');
-            const deviceList = document.getElementById('device-list');
-
-            form.addEventListener('submit', (event) => {
-                event.preventDefault();
-
-                // Get form values
-                const deviceName = document.getElementById('deviceName').value.trim();
-                const deviceType = document.getElementById('deviceType').value;
-                const ownerName = document.getElementById('ownerName').value.trim();
-                const batteryStatus = parseInt(document.getElementById('batteryStatus').value);
-
-                // Perform validation checks
-                let errorMessages = [];
-
-                if (!deviceName) errorMessages.push('Device Name is required');
-                if (!deviceType) errorMessages.push('Device Type is required');
-                if (!ownerName) errorMessages.push('Owner Name is required');
-                if (isNaN(batteryStatus) || batteryStatus < 1 || batteryStatus > 100) {
-                    errorMessages.push('Battery Status must be a number between 1 and 100');
-                }
-
-                if (errorMessages.length > 0) {
-                    alert('Error:\n' + errorMessages.join('\n'));
-                    return;
-                }
-
-                // Create a new list item
-                const listItem = document.createElement('li');
-                listItem.textContent = `Name: ${deviceName}, Type: ${deviceType}, Owner: ${ownerName}, Battery: ${batteryStatus}%`;
-
-                // Add the new list item to the device list
-                deviceList.appendChild(listItem);
-
-                // Clear the form fields
-                form.reset();
+        try {
+            // Simulating a database operation
+            db.addDevice({
+                id: 1,
+                name: "Device 1",
+                description: "This is device 1"
             });
-        });
+        } catch (error) {
+            console.error("Database error:", error);
+            // Handle the error by displaying an error message to the user
+            document.getElementById("database-error").innerHTML = "An error occurred while adding a device.";
+        }
+
+        try {
+            // Simulating another database operation
+            db.updateDevice({
+                id: 1,
+                name: "Device 1 Updated",
+                description: "This is device 1 updated"
+            });
+        } catch (error) {
+            console.error("Database error:", error);
+            document.getElementById("database-error").innerHTML = "An error occurred while updating a device.";
+        }
+
+        try {
+            // Simulating another database operation
+            db.deleteDevice(1);
+        } catch (error) {
+            console.error("Database error:", error);
+            document.getElementById("database-error").innerHTML = "An error occurred while deleting a device.";
+        }
     </script>
+
+    <!-- Displaying the error message -->
+    <p id="database-error"></p>
 </body>
 </html>
 ```
