--- a/public/index2.html
+++ b/public/index2.html
@@ -1,6 +1,3 @@
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,71 +7,88 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
+            margin: 0;
+            padding: 20px;
+            background-color: #f0f0f0;
         }
-        h1 {
+        h1, h2 {
             text-align: center;
+            color: #333;
         }
         table {
             width: 100%;
             border-collapse: collapse;
             margin-bottom: 20px;
-        }
-        table, th, td {
-            border: 1px solid black;
+            background-color: #fff;
         }
         th, td {
-            padding: 10px;
+            border: 1px solid #ddd;
+            padding: 12px;
             text-align: left;
         }
-        form {
-            max-width: 600px;
-            margin: 0 auto;
+        th {
+            background-color: #f2f2f2;
+            font-weight: bold;
         }
-        form div {
-            margin-bottom: 10px;
+        form {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            margin-bottom: 20px;
         }
         label {
             display: block;
             margin-bottom: 5px;
+            font-weight: bold;
         }
-        input[type="text"], input[type="number"], select {
+        input, select {
             width: 100%;
             padding: 8px;
+            margin-bottom: 15px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
             box-sizing: border-box;
         }
-        input[type="submit"] {
-            padding: 10px 20px;
+        button {
             background-color: #4CAF50;
             color: white;
+            padding: 10px 15px;
             border: none;
+            border-radius: 4px;
             cursor: pointer;
+            font-size: 16px;
         }
-        input[type="submit"]:hover {
+        button:hover {
             background-color: #45a049;
+        }
+        .error {
+            color: red;
+            font-size: 14px;
+            margin-top: -10px;
+            margin-bottom: 10px;
         }
         .action-buttons {
             display: flex;
-            gap: 10px;
+            justify-content: space-between;
         }
-        .action-buttons button {
-            padding: 5px 10px;
-            cursor: pointer;
+        .update-btn {
+            background-color: #2196F3;
         }
-        .edit-button {
-            background-color: #FFA500;
-            color: white;
-            border: none;
+        .update-btn:hover {
+            background-color: #0b7dda;
         }
-        .delete-button {
-            background-color: #FF0000;
-            color: white;
-            border: none;
+        .delete-btn {
+            background-color: #f44336;
+        }
+        .delete-btn:hover {
+            background-color: #da190b;
         }
     </style>
 </head>
 <body>
     <h1>Device Management App</h1>
+
     <table id="deviceTable">
         <thead>
             <tr>
@@ -86,99 +100,209 @@
             </tr>
         </thead>
         <tbody>
-            <!-- Existing devices will be listed here -->
         </tbody>
     </table>
+
     <form id="deviceForm">
-        <div>
-            <label for="deviceName">Device Name:</label>
-            <input type="text" id="deviceName" name="deviceName" required>
-        </div>
-        <div>
-            <label for="deviceType">Device Type:</label>
-            <select id="deviceType" name="deviceType" required>
-                <option value="Smartphone">Smartphone</option>
-                <option value="Tablet">Tablet</option>
-                <option value="Camera">Camera</option>
-            </select>
-        </div>
-        <div>
-            <label for="ownerName">Owner Name:</label>
-            <input type="text" id="ownerName" name="ownerName" required>
-        </div>
-        <div>
-            <label for="batteryStatus">Battery Status (%):</label>
-            <input type="number" id="batteryStatus" name="batteryStatus" min="0" max="100" required>
-        </div>
-        <div>
-            <input type="submit" value="Add Device">
+        <h2>Add New Device</h2>
+        <label for="deviceName">Device Name:</label>
+        <input type="text" id="deviceName" required>
+        <div id="deviceNameError" class="error"></div>
+
+        <label for="deviceType">Device Type:</label>
+        <select id="deviceType" required>
+            <option value="">Select Device Type</option>
+            <option value="Smartphone">Smartphone</option>
+            <option value="Tablet">Tablet</option>
+            <option value="Camera">Camera</option>
+        </select>
+        <div id="deviceTypeError" class="error"></div>
+
+        <label for="ownerName">Owner Name:</label>
+        <input type="text" id="ownerName" required>
+        <div id="ownerNameError" class="error"></div>
+
+        <label for="batteryStatus">Battery Status (0-100%):</label>
+        <input type="number" id="batteryStatus" min="0" max="100" required>
+        <div id="batteryStatusError" class="error"></div>
+
+        <button type="submit">Add Device</button>
+    </form>
+
+    <form id="updateForm" style="display: none;">
+        <h2>Update Device</h2>
+        <input type="hidden" id="updateIndex">
+        <label for="updateDeviceName">Device Name:</label>
+        <input type="text" id="updateDeviceName" required>
+        <div id="updateDeviceNameError" class="error"></div>
+
+        <label for="updateDeviceType">Device Type:</label>
+        <select id="updateDeviceType" required>
+            <option value="">Select Device Type</option>
+            <option value="Smartphone">Smartphone</option>
+            <option value="Tablet">Tablet</option>
+            <option value="Camera">Camera</option>
+        </select>
+        <div id="updateDeviceTypeError" class="error"></div>
+
+        <label for="updateOwnerName">Owner Name:</label>
+        <input type="text" id="updateOwnerName" required>
+        <div id="updateOwnerNameError" class="error"></div>
+
+        <label for="updateBatteryStatus">Battery Status (0-100%):</label>
+        <input type="number" id="updateBatteryStatus" min="0" max="100" required>
+        <div id="updateBatteryStatusError" class="error"></div>
+
+        <div class="action-buttons">
+            <button type="submit" class="update-btn">Update Device</button>
+            <button type="button" onclick="cancelUpdate()">Cancel</button>
         </div>
     </form>
 
     <script>
-        document.getElementById('deviceForm').addEventListener('submit', function(event) {
+        let devices = JSON.parse(localStorage.getItem('devices')) || [];
+
+        function addDevice(event) {
             event.preventDefault();
 
-            // Get form values
+            if (!validateForm('deviceForm')) {
+                return;
+            }
+
             const deviceName = document.getElementById('deviceName').value;
             const deviceType = document.getElementById('deviceType').value;
             const ownerName = document.getElementById('ownerName').value;
             const batteryStatus = document.getElementById('batteryStatus').value;
 
-            // Create a new row
-            const table = document.getElementById('deviceTable').getElementsByTagName('tbody')[0];
-            const newRow = table.insertRow();
-
-            // Insert cells
-            const cell1 = newRow.insertCell(0);
-            const cell2 = newRow.insertCell(1);
-            const cell3 = newRow.insertCell(2);
-            const cell4 = newRow.insertCell(3);
-            const cell5 = newRow.insertCell(4);
-
-            // Add values to cells
-            cell1.innerHTML = deviceName;
-            cell2.innerHTML = deviceType;
-            cell3.innerHTML = ownerName;
-            cell4.innerHTML = batteryStatus;
-
-            // Add action buttons
-            const actionButtons = document.createElement('div');
-            actionButtons.className = 'action-buttons';
-            const editButton = document.createElement('button');
-            editButton.className = 'edit-button';
-            editButton.innerHTML = 'Edit';
-            editButton.onclick = function() {
-                editDevice(newRow);
+            const newDevice = {
+                deviceName,
+                deviceType,
+                ownerName,
+                batteryStatus
             };
-            const deleteButton = document.createElement('button');
-            deleteButton.className = 'delete-button';
-            deleteButton.innerHTML = 'Delete';
-            deleteButton.onclick = function() {
-                deleteDevice(newRow);
-            };
-            actionButtons.appendChild(editButton);
-            actionButtons.appendChild(deleteButton);
-            cell5.appendChild(actionButtons);
 
-            // Clear form
-            document.getElementById('deviceForm').reset();
-        });
-
-        function editDevice(row) {
-            const cells = row.getElementsByTagName('td');
-            document.getElementById('deviceName').value = cells[0].innerHTML;
-            document.getElementById('deviceType').value = cells[1].innerHTML;
-            document.getElementById('ownerName').value = cells[2].innerHTML;
-            document.getElementById('batteryStatus').value = cells[3].innerHTML;
-
-            // Remove the row from the table
-            row.parentNode.removeChild(row);
+            devices.push(newDevice);
+            updateDeviceTable();
+            saveToLocalStorage();
+            event.target.reset();
         }
 
-        function deleteDevice(row) {
-            row.parentNode.removeChild(row);
+        function updateDeviceTable() {
+            const tableBody = document.querySelector('#deviceTable tbody');
+            tableBody.innerHTML = '';
+
+            devices.forEach((device, index) => {
+                const row = tableBody.insertRow();
+                row.insertCell(0).textContent = device.deviceName;
+                row.insertCell(1).textContent = device.deviceType;
+                row.insertCell(2).textContent = device.ownerName;
+                row.insertCell(3).textContent = `${device.batteryStatus}%`;
+
+                const actionsCell = row.insertCell(4);
+                const updateButton = document.createElement('button');
+                updateButton.textContent = 'Update';
+                updateButton.className = 'update-btn';
+                updateButton.onclick = () => showUpdateForm(index);
+                actionsCell.appendChild(updateButton);
+
+                const deleteButton = document.createElement('button');
+                deleteButton.textContent = 'Delete';
+                deleteButton.className = 'delete-btn';
+                deleteButton.onclick = () => deleteDevice(index);
+                actionsCell.appendChild(deleteButton);
+            });
         }
+
+        function showUpdateForm(index) {
+            const device = devices[index];
+            document.getElementById('updateIndex').value = index;
+            document.getElementById('updateDeviceName').value = device.deviceName;
+            document.getElementById('updateDeviceType').value = device.deviceType;
+            document.getElementById('updateOwnerName').value = device.ownerName;
+            document.getElementById('updateBatteryStatus').value = device.batteryStatus;
+
+            document.getElementById('deviceForm').style.display = 'none';
+            document.getElementById('updateForm').style.display = 'block';
+        }
+
+        function updateDevice(event) {
+            event.preventDefault();
+
+            if (!validateForm('updateForm')) {
+                return;
+            }
+
+            const index = document.getElementById('updateIndex').value;
+            const deviceName = document.getElementById('updateDeviceName').value;
+            const deviceType = document.getElementById('updateDeviceType').value;
+            const ownerName = document.getElementById('updateOwnerName').value;
+            const batteryStatus = document.getElementById('updateBatteryStatus').value;
+
+            devices[index] = {
+                deviceName,
+                deviceType,
+                ownerName,
+                batteryStatus
+            };
+
+            updateDeviceTable();
+            saveToLocalStorage();
+            cancelUpdate();
+        }
+
+        function cancelUpdate() {
+            document.getElementById('deviceForm').style.display = 'block';
+            document.getElementById('updateForm').style.display = 'none';
+            document.getElementById('updateForm').reset();
+        }
+
+        function deleteDevice(index) {
+            if (confirm('Are you sure you want to delete this device?')) {
+                devices.splice(index, 1);
+                updateDeviceTable();
+                saveToLocalStorage();
+            }
+        }
+
+        function validateForm(formId) {
+            const form = document.getElementById(formId);
+            let isValid = true;
+
+            form.querySelectorAll('input, select').forEach(element => {
+                const errorElement = document.getElementById(element.id + 'Error');
+                if (errorElement) {
+                    errorElement.textContent = '';
+                }
+
+                if (!element.value) {
+                    isValid = false;
+                    if (errorElement) {
+                        errorElement.textContent = 'This field is required.';
+                    }
+                }
+
+                if (element.id.includes('batteryStatus')) {
+                    const value = parseInt(element.value);
+                    if (isNaN(value) || value < 0 || value > 100) {
+                        isValid = false;
+                        if (errorElement) {
+                            errorElement.textContent = 'Battery status must be between 0 and 100.';
+                        }
+                    }
+                }
+            });
+
+            return isValid;
+        }
+
+        function saveToLocalStorage() {
+            localStorage.setItem('devices', JSON.stringify(devices));
+        }
+
+        document.getElementById('deviceForm').addEventListener('submit', addDevice);
+        document.getElementById('updateForm').addEventListener('submit', updateDevice);
+
+        updateDeviceTable();
     </script>
 </body>
 </html>
